--- a/Exercises1.html
+++ b/Exercises1.html
@@ -4,11 +4,10 @@
  <meta charset="UTF-8">
  <meta http-equiv="X-UA-Compatible" content="IE=edge">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <script src="./Exercises1.js" ></script>
  <title>Document</title>
-<script src="./Exercises1.html"></script>
 </head>
 <body>
- <h1>YAY JS EXERCISE</h1>
- 
+ <h1>EXERCISE 1</h1>
 </body>
 </html>
